o Remove $BUILD_TOOLS in favor of cash variable

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,7 @@
-SUBDIRS = @subdirs@ src
+SUBDIRS = tracer t-infinity src
+
+DIST_SUBDIRS = @subdirs@ src
+
+ACLOCAL_AMFLAGS = -I config i-I $(build_tools)/aclocal @ACLOCAL_AMFLAGS@
 
 EXTRA_DIST = bootstrap
