o The build-tools will be searched because of ACLOCAL_AMFLAGS

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,7 @@ SUBDIRS = tracer t-infinity src
 
 DIST_SUBDIRS = @subdirs@ src
 
-ACLOCAL_AMFLAGS = -I config i-I $(build_tools)/aclocal @ACLOCAL_AMFLAGS@
+#ACLOCAL_AMFLAGS = -I config -I $(build_tools)/aclocal @ACLOCAL_AMFLAGS@
+ACLOCAL_AMFLAGS = -I config @ACLOCAL_AMFLAGS@
 
 EXTRA_DIST = bootstrap
