o Change Summary output description

--- a/configure.ac
+++ b/configure.ac
@@ -71,7 +71,7 @@ MPISUPPORT=`if test "$with_mpi" != 'no'; then echo yes ; else echo no ; fi`
 
 AC_MSG_RESULT([
 
-Configuration (Distance Library):
+Configuration (YOGA Library):
 
       Source code location: ${srcdir}
       C++ Compiler:         ${CXX}
