--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,17 @@ aclocal.m4
 autom4te.cache
 config.h.in
 config.h.in~
-config
+config/compile
+config/config.guess
+config/config.sub
+config/depcomp
+config/install-sh
+config/libtool.m4
+config/ltmain.sh
+config/ltoptions.m4
+config/ltsugar.m4
+config/ltversion.m4
+config/lt~obsolete.m4
+config/missing
 configure
+configure~
